Tried adjusting some CSS and HTML to fix alignment error on index.html

--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ nav a {
     padding: 10px 10px 20px 10px;
 }
 
-.module-container {
+.module {
     display: flex;
     flex-direction: row;
     width: 800px;
